--- a/All_css/services_style.css
+++ b/All_css/services_style.css
@@ -264,11 +264,35 @@ height: 7rem;
 
 .card_img{
 
-    height:80px;
-    width: 180px;
-    border: 1px solid black;
+    height:160px;
+    width: 200px;
+    /* border: 1px solid black; */
     border-radius: 15px;
+    overflow:hidden;
 
+}
+
+.bg4{
+    background-image: url(../Images/community.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.bg3{
+    width: 220px;
+    border-radius: 15px;
+    background-image: url(../Images/treatment.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.bg2{
+    background-image: url(../Images/daily_track.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .card_txtbox{
@@ -294,6 +318,8 @@ height: 7rem;
    height: 200px;
    width: 230px;
    top: 0px;
+   text-align: center;
+   font-size: larger;
    
 
     
@@ -314,6 +340,7 @@ height: 7rem;
     transition: 1s ease-in-out;
     padding: 15px;
     /* opacity: 0; */
+    text-align: center;
     
   
    
@@ -393,8 +420,14 @@ animation-play-state: paused;
     width: 40%;
     /* border: 1px solid red; */
     margin-left:15px ;
+    overflow: hidden;
 }
 
+b{
+display: inline-block;
+margin-bottom: 12px;
+
+}
 .doc_txt{
     /* border: 1px solid red; */
     margin-inline: 10px;
@@ -422,7 +455,7 @@ animation-play-state: paused;
     /* border: 1px solid rgb(26, 226, 0); */
     overflow: hidden;
     box-sizing: border-box;
-    height: 243px;
+    height: 428px;
 }
 .com_img {
     height: 64px;
@@ -432,7 +465,7 @@ animation-play-state: paused;
 .c_2 .com_img{
     position: relative;
     right: -218px;
-    top: -129px;
+    top: -324px;
 
 }
 .c_3 .com_img{
@@ -450,7 +483,11 @@ animation-play-state: paused;
 .c_4 .com_img{
     position: relative;
     right: 10px;
-    top: -160px;
+    top: -354px;
+    
+}
+.c_5 .com_img{
+    top: -334px;
 
 }
 .c_2 .com_text{
