--- a/All_css/loading.css
+++ b/All_css/loading.css
@@ -16,16 +16,19 @@ padding: 0;
 body{
     overflow: hidden;
 }
+
+
 .loader-wrapper {
 height: 100%;
 width: 100%;
-position: absolute;
+position: fixed;
 top: 0px;
 left: 0px;
 display: flex;
 justify-content: center;
 align-items: center;
 background-color: #69c9fd;
+z-index: 100;
 }
 
 .loading-page {
@@ -38,123 +41,84 @@ background-color: white;
 border-radius: 5.5rem;
 }
 
-.loading-page-contents {
-position: absolute;
-bottom: var(--size);
-left: calc(var(--size) * 2);
-width: var(--size);
-height: var(--size);
-border-radius: 5px;
-animation: jump var(--duration) linear infinite;
-}
-
-.loading-page-contents:nth-child(1)::after {
-content: '';
-position: absolute;
-bottom: calc(var(--size) / 8);
-left: 45%;
-width: calc(var(--size) * 2 / 3);
-height: calc(var(--size) * 2 / 3);
-border-radius: 50%;
-border-top: 4px solid var(--block);
-border-left: 4px solid var(--block);
-transform: rotate(135deg);
-}
-
-.loading-page-contents:nth-child(1) {
-background-color: var(--block);
-z-index: 10;
-}
-
-.loading-page-contents:nth-child(2) {
-background-color: var(--block-2);
-width: calc(var(--size) / 2);
-height: calc(var(--size) / 2);
-left: calc(var(--size) * 2.2);
-z-index: 9;
-animation: jump1 var(--duration) linear infinite;
-}
-
-.loading-page-contents:nth-child(3) {
-background-color: var(--block-3);
-width: calc(var(--size) / 3);
-height: calc(var(--size) / 3);
-left: calc(var(--size) * 5 / 2);
-z-index: 8;
-animation: jump2 var(--duration) linear infinite;
-}
-
-@keyframes jump {
-0% {
-    bottom: var(--size);
-    transform: scaleY(1) scaleX(1);
-    transform-origin: bottom;
-}
-8% {
-    bottom: var(--size);
-    transform: scaleY(0.5) scaleX(1.4);
-    transform-origin: bottom;
-    animation-timing-function: cubic-bezier(0, 0.8, 0.74, 1);
-}
-25% {
-    bottom: calc(var(--size) * 3);
-    transform: scaleY(1) scaleX(1);
-    animation-timing-function: cubic-bezier(0.8, 0.42, 1, 0.64);
-}
-95% {
-    bottom: var(--size);
-    transform: scaleY(1) scaleX(1) rotate(0turn);
-}
-100% {
-    bottom: var(--size);
-    transform: scaleY(1) scaleX(1) rotate(0turn);
-}
-}
-
-@keyframes jump1 {
-0% {
-    bottom: var(--size);
-    transform: scaleY(1) scaleX(1);
-    transform-origin: bottom;
-}
-8% {
-    bottom: var(--size);
-    transform: scaleY(1) scaleX(1);
-    transform-origin: bottom;
-    animation-timing-function: cubic-bezier(0, 0.8, 0.74, 1);
-}
-55% {
-    bottom: calc(var(--size) * 5.5);
-    transform: scaleY(1) scaleX(1) rotate(-1turn);
-    transform-origin: center;
-    animation-timing-function: cubic-bezier(0.29, 0.01, 1, 0.55);
-}
-100% {
-    bottom: var(--size);
-    transform: scaleY(1) scaleX(1) rotate(-2turn);
-}
-}
-
-@keyframes jump2 {
-0% {
-    bottom: var(--size);
-    transform: scaleY(1) scaleX(1);
-    transform-origin: bottom;
-}
-8% {
-    bottom: var(--size);
-    transform: scaleY(1) scaleX(1);
-    transform-origin: bottom;
-    animation-timing-function: cubic-bezier(0, 0.8, 0.74, 1);
-}
-55% {
-    bottom: calc(var(--size) * 6.5);
-    transform: scaleY(1) scaleX(1) rotate(1turn);
-    transform-origin: center;
-    animation-timing-function: cubic-bezier(0.29, 0.01, 1, 0.55);
-}
-100% {
-    bottom: var(--size);
-    transform: scaleY(1) scaleX(1) rotate(2turn);
-}
-}
+.loader {
+    color: #ffffff;
+    font-size: 90px;
+    text-indent: -9999em;
+    overflow: hidden;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    margin: 72px auto;
+    position: relative;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    -webkit-animation: load6 1.7s infinite ease, round 1.7s infinite ease;
+    animation: load6 1.7s infinite ease, round 1.7s infinite ease;
+  }
+  @-webkit-keyframes load6 {
+    0% {
+      box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+    5%,
+    95% {
+      box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+    10%,
+    59% {
+      box-shadow: 0 -0.83em 0 -0.4em, -0.087em -0.825em 0 -0.42em, -0.173em -0.812em 0 -0.44em, -0.256em -0.789em 0 -0.46em, -0.297em -0.775em 0 -0.477em;
+    }
+    20% {
+      box-shadow: 0 -0.83em 0 -0.4em, -0.338em -0.758em 0 -0.42em, -0.555em -0.617em 0 -0.44em, -0.671em -0.488em 0 -0.46em, -0.749em -0.34em 0 -0.477em;
+    }
+    38% {
+      box-shadow: 0 -0.83em 0 -0.4em, -0.377em -0.74em 0 -0.42em, -0.645em -0.522em 0 -0.44em, -0.775em -0.297em 0 -0.46em, -0.82em -0.09em 0 -0.477em;
+    }
+    100% {
+      box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+  }
+  @keyframes load6 {
+    0% {
+      box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+    5%,
+    95% {
+      box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+    10%,
+    59% {
+      box-shadow: 0 -0.83em 0 -0.4em, -0.087em -0.825em 0 -0.42em, -0.173em -0.812em 0 -0.44em, -0.256em -0.789em 0 -0.46em, -0.297em -0.775em 0 -0.477em;
+    }
+    20% {
+      box-shadow: 0 -0.83em 0 -0.4em, -0.338em -0.758em 0 -0.42em, -0.555em -0.617em 0 -0.44em, -0.671em -0.488em 0 -0.46em, -0.749em -0.34em 0 -0.477em;
+    }
+    38% {
+      box-shadow: 0 -0.83em 0 -0.4em, -0.377em -0.74em 0 -0.42em, -0.645em -0.522em 0 -0.44em, -0.775em -0.297em 0 -0.46em, -0.82em -0.09em 0 -0.477em;
+    }
+    100% {
+      box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+    }
+  }
+  @-webkit-keyframes round {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  @keyframes round {
+    0% {
+      -webkit-transform: rotate(0deg);
+      transform: rotate(0deg);
+    }
+    100% {
+      -webkit-transform: rotate(360deg);
+      transform: rotate(360deg);
+    }
+  }
+  
