--- a/All_css/services_style.css
+++ b/All_css/services_style.css
@@ -8,8 +8,10 @@
 body,html{
     width: 100vw;
     overflow-x: hidden;
-    scroll-behavior: smooth;
+    
+    /* scroll-behavior: smooth; */
 }
+
 
 .nav-disable-in-mobile{
     display: grid;   
@@ -18,6 +20,7 @@ body,html{
     grid-template-areas: 
     'nav-logo nav-logo nav-links nav-links nav-links nav-btn';
 }
+
 .nav-logo{
     grid-area: nav-logo;
 }
@@ -29,6 +32,7 @@ body,html{
 }
 .nav-links a{
     color: rgb(120, 220, 101);
+
 }
 .nav-btn{
     grid-area: nav-btn;
@@ -38,6 +42,7 @@ body,html{
 }
 .nav-btn a:hover{
     box-shadow: 2px 2px 5px -1px #000000;
+    cursor: pointer;
 }
 
 
@@ -114,7 +119,8 @@ body,html{
     display: flex;
     flex-direction: column;
     list-style: none;
-    font-family: sans-serif;
+    /* font-family: sans-serif; */
+    font-family: 'Raleway', sans-serif;
     margin: 10vh 0px;
 }
 .nav-menu li {
@@ -126,7 +132,8 @@ body,html{
     text-decoration: none;
     color: #5a77ff;
     font-size: 28px;
-    font-family: 'Titillium Web', sans-serif;
+    /* font-family: 'Titillium Web', sans-serif; */
+    font-family: 'Raleway', sans-serif;
     background: transparent;
     padding: 0px;
     font-weight: normal;
@@ -172,10 +179,12 @@ height: 7rem;
 }
 .nav-disable-in-mobile a{
     text-decoration: none;
-    font-family: 'Titillium Web', sans-serif;
+    /* font-family: 'Titillium Web', sans-serif; */
+    font-family: 'Raleway', sans-serif;
 }
 .nav-links a:hover{
     color: black;
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 1000px) and (min-width: 750px){            /*MEDIA QUERY*/
@@ -694,3 +703,7 @@ margin-bottom: 12px;
     width: 40px;
 }
   
+.services span{
+    font-family: cursive;
+    font-size: larger;
+}
