--- a/All_css/services_style.css
+++ b/All_css/services_style.css
@@ -226,7 +226,7 @@ height: 7rem;
     width: 100vw;
     overflow-x: hidden;
     margin-block: 25px;
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Comfortaa', calibiri;
     /* border: 1px solid black; */
 }
 .space{
@@ -381,7 +381,7 @@ animation-play-state: paused;
     border: 2px solid black;
     background-color: rgb(0, 47, 255);
     color: white;
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Comfortaa', calibiri;
 
 }
 .cd_div2 button:hover{
@@ -528,7 +528,7 @@ margin-bottom: 12px;
 }
 .ser_left h1{
     margin-bottom: 10px;
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Comfortaa', calibiri;
     font-size: 46px;
 }
 .ser_right{
@@ -704,6 +704,24 @@ margin-bottom: 12px;
 }
   
 .services span{
-    font-family: cursive;
+    font-family: calibiri;
     font-size: larger;
+}
+
+@media screen and (max-width:600px) {
+    
+    .ser_left{
+        width: 100vw;
+        /* border: 1px solid black; */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        padding:10px;
+        text-align: center;
+    }
+    .ser_left h1{
+        text-align: center;
+    }
 }
